plugins {
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: 'lib', include: ['*.jar'])
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.java-websocket:Java-WebSocket:1.5.6'
    implementation 'org.mongodb:bson:5.1.4'
    implementation 'org.mongodb:mongodb-driver-core:5.1.4'
    implementation 'org.mongodb:mongodb-driver-sync:5.1.4'
}

sourceSets {
    main {
        java { srcDirs = ['src'] }
    }
}

// Launch the editor UI
task runUI(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'ui.EditorWindow'
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

// Run the Phase 1 + Phase 2 test suite
task runTests(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'Main'
}

// Launch the WebSocket collaboration server
task runServer(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'ServerLauncher'
}
